# device-connect-voice

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: protocol.md
firmware/: README.md  secrets.yaml.example
firmware/components/device_connect/: README.md  __init__.py  device_connect.cpp  device_connect.h  device_connect_rpc.cpp  device_connect_zenoh.cpp  device_connect_zenoh.h
firmware/esphome/: README.md  device-connect-voice.full.yaml  device-connect-voice.overlay.yaml
scripts/: flash_firmware.sh  merge_voice_pe_yaml.py  prepare_firmware.sh  run_portal_sim.sh  run_smoke.sh  test_zenoh_voice_rpc.py  vendor_zenoh_pico.sh
src/device_connect_voice/: __init__.py  __main__.py  config.py  device_connect.py  logging_setup.py  mesh.py  runtime_launcher.py  transport.py  voice_state.py
tests/: conftest.py  contract.py  smoke_sim_runtime.py  test_config.py  test_driver.py  test_merge_voice_pe_yaml.py  test_sim_transport.py  test_voice_state.py
